Fixed rendering glitch on iPhone (issue #569).

--- a/client/src/widgets/header-button.scss
+++ b/client/src/widgets/header-button.scss
@@ -29,7 +29,7 @@
 
     INPUT[type="file"] {
         position: absolute;
-        z-index: -50000;
+        visibility: hidden;
         width: 1px;
         height: 1px;
     }
